# docstring-parser

./: .gitignore  pyproject.toml
rust/: Cargo.toml
rust/src/: context.rs  cursor.rs  error.rs  guard.rs  indent.rs  lib.rs  schema.rs  utils.rs
rust/src/parser/: argument.rs  common.rs  docstring.rs  mod.rs  plain_paragraph.rs
rust/src/parser_legacy/: args.rs
src/docstring_parser/: __init__.py
tests/: test_e2e.py
