[package]
name = "docstring-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "docstring_parser"
crate-type = ["cdylib"]

[dependencies]
indoc = "2.0.4"
pyo3 = "0.21.0-beta.0"
textwrap = "0.16.1"
